--- a/config-testnet.json
+++ b/config-testnet.json
@@ -1,9 +1,9 @@
 {
-  "port": 4096,
-  "address": "0.0.0.0",
-  "publicIp": "",
+  "port": 8000,
+  "address": "127.0.0.1",
+  "publicIp": "116.62.158.206",
   "logLevel": "log",
-  "magic": "594fe0f3",
+  "magic": "bbfbb978",
   "api": {
     "access": {
       "whiteList": []
@@ -11,10 +11,27 @@
   },
   "peers": {
     "list": [
-      {"ip": "45.32.19.241", "port": 4096},
-      {"ip": "45.32.62.184", "port": 4096},
-      {"ip": "45.32.22.78", "port": 4096},
-      {"ip": "45.32.248.33", "port": 4096}
+      {"ip": "116.62.158.206", "port": 8000},
+      {"ip": "116.62.158.206", "port": 8001},
+      {"ip": "116.62.158.206", "port": 8002},
+      {"ip": "116.62.158.206", "port": 8003},
+      {"ip": "116.62.158.206", "port": 8004},
+      {"ip": "116.62.158.206", "port": 8005},
+      {"ip": "116.62.158.206", "port": 8006},
+      {"ip": "116.62.158.206", "port": 8007},
+      {"ip": "116.62.158.206", "port": 8008},
+      {"ip": "116.62.158.206", "port": 8009},
+      {"ip": "116.62.158.206", "port": 8010},
+      {"ip": "116.62.158.206", "port": 8011},
+      {"ip": "116.62.158.206", "port": 8012},
+      {"ip": "116.62.158.206", "port": 8013},
+      {"ip": "116.62.158.206", "port": 8014},
+      {"ip": "116.62.158.206", "port": 8015},
+      {"ip": "116.62.158.206", "port": 8016},
+      {"ip": "116.62.158.206", "port": 8017},
+      {"ip": "116.62.158.206", "port": 8018},
+      {"ip": "116.62.158.206", "port": 8019},
+      {"ip": "116.62.158.206", "port": 8020}
     ],
     "blackList": [],
     "options": {
