--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "asch",
-  "version": "1.3.6",
+  "name": "jdcn",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "start": "node app.js",
     "test": "./node_modules/.bin/mocha --require mocha-babel"
   },
-  "author": "Qingfeng Shan <sqf1225@foxmail.com>",
+  "author": "Feisha <hi@waphe.com>",
   "dependencies": {
     "array.prototype.find": "1.0.0",
     "array.prototype.findindex": "2.0.0",
