--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "array.prototype.find": "1.0.0",
     "array.prototype.findindex": "2.0.0",
-    "asch-js": "*",
+    "asch-js": "https://github.com/WashiPlatform/serc-js.git",
     "asch-sandbox": "https://github.com/AschPlatform/asch-sandbox-dist/tarball/master",
     "async": "1.5.2",
     "bignumber": "https://github.com/AschPlatform/bignumber/tarball/master",
