--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "array.prototype.find": "1.0.0",
     "array.prototype.findindex": "2.0.0",
-    "asch-js": "https://github.com/WashiPlatform/serc-js.git",
     "asch-sandbox": "https://github.com/AschPlatform/asch-sandbox-dist/tarball/master",
     "async": "1.5.2",
     "bignumber": "https://github.com/AschPlatform/bignumber/tarball/master",
@@ -39,6 +38,7 @@
     "randomstring": "1.1.5",
     "request": "2.74.0",
     "rimraf": "2.5.4",
+    "serc-js": "git+https://github.com/WashiPlatform/serc-js.git",
     "shelljs": "^0.7.8",
     "socket.io": "1.4.8",
     "sodium": "^2.0.3",
