--- a/public/package.json
+++ b/public/package.json
@@ -7,10 +7,10 @@
     "postinstall": "npm run build",
     "preinstall": "bower install",
     "start": "gulp",
-    "build": "browserify build.js -o bower_components/bitcore-mnemonic.js && cp node_modules/asch-js/browserify-asch.js bower_components/ && cp node_modules/bignumber.js/bignumber.min.js bower_components/"
+    "build": "browserify build.js -o bower_components/bitcore-mnemonic.js && cp node_modules/serc-js/browserify-serc.js bower_components/ && cp node_modules/bignumber.js/bignumber.min.js bower_components/"
   },
   "dependencies": {
-    "asch-js": "^1.3.9",
+    "serc-js": "https://github.com/WashiPlatform/serc-js.git",
     "bignumber.js": "^5.0.0",
     "bitcore-mnemonic": "1.0.1",
     "browserify": "^14.4.0",
