禁用兼容代码

--- a/config.json
+++ b/config.json
@@ -18,107 +18,107 @@
   },
   "forging": {
     "secret": [
-      "acoustic predict universe bronze subject oxygen egg canoe rice awesome parrot credit",
-      "faculty vague arm top gasp engine club blame match soap march pistol",
-      "old siren tortoise fruit nature cereal stadium forest price equip split fossil",
-      "close barrel powder confirm special draw shrimp jaguar wage dawn title broken",
-      "silly net profit chuckle smooth adapt soft boat valve cross hockey skull",
-      "crater please arrow gain brain eyebrow save inner property labor apart render",
-      "company flavor beach lumber pizza update put essence element venue afford rare",
-      "furnace tooth shoulder blade bulk student practice sample deer trap miss undo",
-      "fetch card sting setup office rose mother asthma curtain transfer keep awake",
-      "monkey love aim pretty awesome total rich attend antenna memory undo soon",
-      "gym say question unfair devote length issue remain fly matrix guitar ten",
-      "dizzy absent crush mixture gadget ranch ribbon virtual tattoo inherit oxygen lab",
-      "awake unveil stand rubber fog grass ordinary number float draft return craft",
-      "need purchase force gain goat lady switch wash fun endorse museum unhappy",
-      "defy keen plastic scorpion walk nurse harvest target original accident educate act",
-      "yard exact awake appear gadget tornado tone cycle bitter horn clinic calm",
-      "cabbage raw goddess dune bean echo travel nothing argue bitter draft hammer",
-      "leg donkey sense nuclear essay wave shallow term school street humble chronic",
-      "claim category crawl negative base across sing cactus bid melody figure glimpse",
-      "mask defense shadow horror profit answer horn spoil fatal drift surprise private",
-      "owner maximum tomorrow enact check picture card purpose unfold fossil illness ginger",
-      "cool piece maid element trial hammer catch donor pipe wish shaft theory",
-      "hand admit bracket punch cricket zone culture truly engage magnet garbage liberty",
-      "august exchange card ribbon island floor stick left pledge name pistol feel",
-      "jacket fame rural simple only huge satisfy thunder absent mango shaft divorce",
-      "project filter force dynamic host purity mind company hunt custom cart lecture",
-      "swift also hollow juice alter outdoor lucky gain creek baby eight funny",
-      "clinic again shadow win honey orange diary face suspect yard chunk price",
-      "suspect kiss purchase case cactus eager romance pencil near coral pumpkin novel",
-      "sketch gather slam find outer air wine siege escape oil erupt bus",
-      "satisfy surround exit smart cool pen capital kangaroo job grow usage alone",
-      "urban alpha snow lumber destroy warrior suit vital timber shuffle split barely",
-      "promote identify fat pause chicken sell sweet armed fantasy admit exhaust bag",
-      "saddle life lucky pluck mask clip interest lucky market cactus feel hope",
-      "rookie screen dilemma patch federal name today essence decade account test garbage",
-      "defy web artwork island hand journey team very hundred desert message grape",
-      "recycle derive flush indoor model excess analyst skate loan obtain usage cushion",
-      "void excite term goose chuckle host color behave wool embark duty beyond",
-      "two winter option round cargo bar crawl brick before oval miss present",
-      "traffic garage pattern lens next animal much bus chase major hamster bracket",
-      "spy sell alpha meadow athlete come gain puppy drink place autumn bag",
-      "crucial item piano hybrid fresh legend seed smart cool course sudden beauty",
-      "left zone duck faculty box snow boring divide involve brief envelope enable",
-      "december frequent mushroom cruel wear awkward engage wide senior toward ramp boss",
-      "daring win drive affair egg tooth isolate pause tuna icon try trigger",
-      "impulse simple advance cushion analyst addict shaft orbit convince quarter fiscal candy",
-      "suspect chimney wash exhibit defy similar afraid scan shaft crystal flame deny",
-      "ozone nose lava glory image pistol begin rib inhale strategy knock sun",
-      "gather skirt vast purity lift critic silly amount chapter dilemma fine absorb",
-      "crouch idea lemon dinner doll job timber bench blossom receive repeat light",
-      "lens table fluid reform able wise judge result shuffle govern sustain sure",
-      "business always very liquid name okay betray flee city boost multiply spend",
-      "swing route dragon today rough ring circle meadow situate air boy genre",
-      "uncover elegant pig permit category vocal buffalo outdoor option involve you course",
-      "soup reflect hello pelican riot swear feel family van cousin draw art",
-      "bundle action wine quote urban right grain frost hobby view rotate room",
-      "below fan moon skate hen merit veteran bright comfort prison film minor",
-      "runway hobby imitate shed round peasant pony festival female pink enforce bulb",
-      "client explain goose stable material stamp permit satoshi elegant apple bottom giraffe",
-      "margin fame tube cement impulse sponsor dynamic shell galaxy seek grab fitness",
-      "badge retire grace finger blade attend town tomorrow exercise jump hard balance",
-      "super joy common basic category stem police notice seat survey merit cute",
-      "account edit cancel decorate agree favorite remain sudden orbit because elder meat",
-      "toss wagon mystery burst problem panel gold black buyer range nuclear off",
-      "still wine horror engage gorilla inspire latin topic spend address web girl",
-      "strong chat entry roof text riot olympic update armed adapt outer often",
-      "mother animal advice warrior prosper false embark lottery pattern enrich alpha reduce",
-      "ecology announce impose dilemma bar usual width owner bus absorb right sample",
-      "stem gather laugh across ceiling truck divide cube video reform luxury fiscal",
-      "figure dragon monster consider swallow crowd seminar enter scare motion cake note",
-      "area ladder find erase hair front material also squirrel chaos square agree",
-      "glove crater grunt interest crew awake again lottery such proud empower display",
-      "venue alter fever diet rocket crisp usual divert describe profit fitness dolphin",
-      "obscure ill vacuum entire head scan much ocean visit soup venture reflect",
-      "lend age sad room horn man thunder scatter lift nice silly analyst",
-      "curtain path novel fossil heart goat wave ski shine double artefact pet",
-      "cannon museum gold host normal unfold later glad acquire sorry tail session",
-      "process immense old heart tower attitude trick rather gold coyote way cupboard",
-      "direct plastic gasp dad tired index twist scare ability job wheat country",
-      "assist curtain announce feel hundred parade tunnel proof share margin six hedgehog",
-      "antenna song spoon possible damp direct affair salt spell bean theory thrive",
-      "student lemon loan wonder gym post style push situate road device company",
-      "twice object view trend edit flavor soup entry height canvas barrel discover",
-      "leaf beauty amazing elder runway scan boy mesh foam syrup girl second",
-      "ignore link hockey swarm emotion same stumble fat economy hint vicious edit",
-      "reform equip civil document already easily surprise basic canal when crumble minimum",
-      "matrix tag phrase such farm impose arrive stay inform plug car reduce",
-      "turkey bleak injury clump material faith clarify good evolve snap solar obey",
-      "youth number lyrics gospel drama bacon excuse install face recipe fog right",
-      "recall miracle special receive awkward face submit social fame drop ancient bomb",
-      "sound rare lunch object emotion wear kitten scissors trim warrior visit rack",
-      "shoulder monster decline master various century tissue own involve report oval choice",
-      "ivory shaft like number boil open solve utility scout october strike rent",
-      "genuine outside crater invest picture young universe divide pumpkin marine butter arch",
-      "renew apart month during decline night volume skirt poet blood general sell",
-      "beach addict stable never blood castle view slender equal menu slogan praise",
-      "unique track indoor volcano bread donor price between awful liar rookie fortune",
-      "hospital mask bleak remind there axis control excite volume speed valve decline",
-      "stock hungry impulse hen okay point follow senior salt census olive question",
-      "burst into limit alpha predict seven faculty depth evoke awful own scene",
-      "hungry scatter scrap inhale obtain rare grunt amount grid alone chaos sketch"
+      "absent original side whip narrow rule job snow rough cradle cloth universe",
+      "can hobby gadget lock wide message nuclear devote creek mom aware sleep",
+      "benefit update burst that cram broken palace tonight oppose cushion fault question",
+      "warrior daughter scare supreme remain spike nothing rare luggage rare only motion",
+      "train brisk badge swing lecture flash globe dial stay monitor obscure shell",
+      "minor kingdom mirror street usual sand hungry desert tenant pass furnace lift",
+      "hard delay phone online claw will kiss fever ordinary modify party hurry",
+      "salon antique rare coconut surge kind gasp tragic matter boil embody solve",
+      "say loyal angle ranch index wet cricket little ugly below struggle palace",
+      "vote canal twelve course place tuna jacket indoor deny reflect middle chicken",
+      "security inner crunch siren west eternal east peace stomach scale range judge",
+      "main text board suffer setup minimum neutral recycle pizza puppy uniform sunset",
+      "ancient card kiwi voice treat retire floor park help pepper hockey hand",
+      "maid bar region bus cost castle fit enable share kiwi catalog tuition",
+      "double sand later organ embrace joy wet impulse clinic crouch kingdom suit",
+      "danger mandate invite minimum truth liberty south damage west inner castle palm",
+      "grocery fold clay unusual lunch boil noise pelican clerk clip video science",
+      "deliver hollow ramp squeeze chair equal wet lady focus illness toddler utility",
+      "guilt quote dune chalk myself violin segment shrimp cake burger wing yellow",
+      "laptop gossip chimney grab close gas ripple eagle renew canoe grief virtual",
+      "need ghost air adult resemble struggle captain giggle term oil kind toddler",
+      "recall height wise artwork funny artist drastic example session art kitchen piano",
+      "bridge device regret good cannon lawn skull man unfair sphere egg split",
+      "measure smart lobster inch pear fluid guitar october struggle evolve fresh cattle",
+      "upgrade run reflect demand enrich day pear despair betray sketch phone crystal",
+      "bean practice fame weapon chief deer spawn over into upset dinosaur drive",
+      "dragon maid armed cricket antenna inspire tooth future post cover chief nuclear",
+      "bundle drink leaf gentle glow gun since spread another female inherit immune",
+      "virtual ripple click keen grunt version kite torch liberty odor flat domain",
+      "praise vibrant great tool smile laundry high ranch lion elite history monitor",
+      "bean abstract lecture vacuum soul hint sword wood mention mad fly usage",
+      "spirit spray visual flavor ship mask include behave brisk exclude alert include",
+      "execute height security spread tackle globe involve donor follow allow syrup sheriff",
+      "salon thrive promote local present warm abstract marble expire sun happy wreck",
+      "region burger umbrella topic evolve erode people gain damp give train legend",
+      "wood immune steak country rabbit fetch broken color member spread rack hire",
+      "climb sort differ drive thank know unaware ensure leaf consider input resemble",
+      "cross cook firm phrase tissue matter icon wheat plug foster ranch joke",
+      "riot elite mad bitter benefit obey orient icon critic ahead ship tumble",
+      "busy member gym vibrant width eight twist snap essay parrot soon globe",
+      "mountain obey pledge hundred fade fresh call demand cloud rail cloth good",
+      "term beef behave worry dance sister eyebrow early erosion session blame isolate",
+      "wonder melody laugh coconut alley exhibit depart clean auction hole debate example",
+      "accuse find buffalo boost umbrella confirm spoon lumber entry bus beef trip",
+      "retire volcano pill aspect panel decide shed treat ghost actor promote tube",
+      "flight ancient gasp buyer jealous check disease anger movie clip bulb rare",
+      "observe fancy emerge episode october giraffe distance photo source section vehicle spatial",
+      "pattern lend essence income track foil insane isolate return uniform dose soccer",
+      "angry narrow ability cactus belt apple yard fuel giant armor sail magic",
+      "neutral will order slim west ring length derive engine drum foam island",
+      "sing pen gather net reflect shiver similar bubble recipe shove renew bring",
+      "swap evidence manual wonder this make book syrup put source panther crystal",
+      "equal search business weapon below tide paddle border access water oil ramp",
+      "exact bicycle pull roast grocery draft drive account person satisfy trigger scheme",
+      "rail letter quit useless smooth page ask inner bottom advance battle quote",
+      "destroy name economy grape reunion major inhale design orphan cram steak gun",
+      "kid fan flat vast list exhibit increase trick property maximum someone grace",
+      "arena hybrid salad stuff rifle fee flee green shove cherry tuna version",
+      "roof wood pyramid churn camera eagle dice brass recall hospital bronze popular",
+      "fantasy turtle fantasy craft portion fiscal dust imitate rose victory section chapter",
+      "emotion bone trap champion collect decide involve ripple combine face stage inquiry",
+      "neutral enforce camera west turn pink thumb script black viable talent shift",
+      "puzzle weapon portion donor fog across renew lava broccoli inmate pitch poet",
+      "flee jealous jar globe royal purity cousin blue silly fix use spin",
+      "cover minimum discover pave you gesture share between refuse ketchup pulse jealous",
+      "wine better weather street hazard maze eyebrow faculty crack typical forward toward",
+      "calm image company shock bridge kidney onion february turkey decade poem unit",
+      "drastic prison genuine credit lonely room force pride lens chunk usage slice",
+      "hard reward delay brick harsh casual select sausage nation fabric venture this",
+      "scale harbor news claw divorce sight attack bottom easy venue chef humble",
+      "ship neglect hundred cement ride exclude zoo weather broccoli connect offer process",
+      "loud vibrant choose brisk code question little sleep wait donkey segment material",
+      "enrich cram welcome match program enact cart uncle cube olive police scene",
+      "angry vacuum myth feed horn donor walk check supreme pet hawk engage",
+      "grocery update can young media dial rhythm vintage jelly lottery tongue drama",
+      "viable circle canvas total usual distance essay rose blind sniff fitness segment",
+      "talent possible reunion decline vendor mouse flag shock safe pet chapter favorite",
+      "train shiver insect economy cushion virus ginger bargain decrease squirrel outer laugh",
+      "identify since toward fun roof envelope upset scan ankle emerge fabric canoe",
+      "stove piece spoon vast alone meat absurd chimney moral rack alert maid",
+      "inmate thumb balcony remain click bunker sleep harbor emerge govern moon stock",
+      "start raise wise fitness reward ramp file soccer lady laptop orphan town",
+      "badge spring obscure border asset shuffle warrior north tail balance crucial among",
+      "deposit frequent stone pizza session sad master vehicle various mention virtual social",
+      "answer sail useful hover parade room flash manual prize shoulder together gauge",
+      "bird aware slot evil drip answer hub rich area viable diamond shop",
+      "detail faculty glass edit shop display bar among mesh argue service envelope",
+      "dad drama board elevator enforce express scrub diamond bacon verify task mesh",
+      "bean fortune water bless cart purity sword base method salad bird rival",
+      "enter calm gain roast bonus language shell inch lecture much narrow wait",
+      "sample friend domain metal melody cost library call heavy movie critic ripple",
+      "section subway joke clinic tiger corn method solar enjoy flush two foam",
+      "scrub miracle pumpkin you mail clump process forward accident swear thing concert",
+      "silent either response love bring plate observe assist crisp luxury olympic tiny",
+      "rely auto inside apology icon million when evolve lava elevator illegal begin",
+      "ostrich symptom physical magic warfare fabric trip gym flag setup scissors dream",
+      "grunt scorpion adult jungle dismiss harvest agent orphan air cry hour settle",
+      "age pair frost stand hollow mule produce snow margin daughter broken credit",
+      "monster wisdom timber guitar moon wise leader crane smoke use render actress",
+      "length cross dish trap danger connect man cheese control account draw boat",
+      "kick spider crouch loyal mutual shadow mother mirror please december woman volcano"
     ],
     "access": {
       "whiteList": [
