--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mathjs": "^3.17.0",
     "method-override": "2.3.6",
     "node-gyp": "^3.6.2",
+    "npm": "^6.0.0",
     "protocol-buffers": "^3.2.1",
     "randomstring": "1.1.5",
     "request": "2.74.0",
